[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/teleporter.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilesets/tilemap_home.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/TransitionScreen1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level0/level0.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/lighting/light.png" type="Texture" id=5]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/doors/singledoor_hadapbawah.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/tilesets/tilemap_home_floor.tres" type="TileSet" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 151 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 18.5625 )

[node name="Level0B" type="Node2D"]
script = ExtResource( 4 )
next_scene = "res://scenes/level0/level0c.tscn"

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -3473409, 0, 0, -3538944, 0, 0, -3538943, 0, 0, -3407873, 0, 0, -3473408, 0, 0, -3473407, 0, 0, -3342337, 0, 0, -3407872, 0, 0, -3407871, 0, 0, -3276801, 0, 0, -3342336, 0, 0, -3342335, 0, 0, -3211265, 0, 0, -3276800, 0, 0, -3276799, 0, 0, -3145729, 0, 0, -3211264, 0, 0, -3211263, 0, 0, -3080193, 0, 0, -3145728, 0, 0, -3145727, 0, 0, -3014657, 0, 0, -3080192, 0, 0, -3080191, 0, 0, -2949121, 0, 0, -3014656, 0, 0, -3014655, 0, 0, -2883585, 0, 0, -2949120, 0, 0, -2949119, 0, 0, -2818049, 0, 0, -2883584, 0, 0, -2883583, 0, 0, -2752513, 0, 0, -2818048, 0, 0, -2818047, 0, 0, -2686977, 0, 0, -2752512, 0, 0, -2752511, 0, 0, -2621441, 0, 0, -2686976, 0, 0, -2686975, 0, 0, -2555905, 0, 0, -2621440, 0, 0, -2621439, 0, 0, -2490369, 0, 0, -2555904, 0, 0, -2555903, 0, 0, -2424833, 0, 0, -2490368, 0, 0, -2490367, 0, 0, -2359297, 0, 0, -2424832, 0, 0, -2424831, 0, 0, -2293761, 0, 0, -2359296, 0, 0, -2359295, 0, 0, -2228225, 0, 0, -2293760, 0, 0, -2293759, 0, 0, -2162689, 0, 0, -2228224, 0, 0, -2228223, 0, 0, -2097153, 0, 0, -2162688, 0, 0, -2162687, 0, 0, -2031617, 0, 0, -2097152, 0, 0, -2097151, 0, 0, -1966081, 0, 0, -2031616, 0, 0, -2031615, 0, 0, -1900545, 0, 0, -1966080, 0, 0, -1966079, 0, 0, -1835009, 0, 0, -1900544, 0, 0, -1900543, 0, 0, -1769473, 0, 0, -1835008, 0, 0, -1835007, 0, 0, -1703937, 0, 0, -1769472, 0, 0, -1769471, 0, 0, -1638401, 0, 0, -1703936, 0, 0, -1703935, 0, 0, -1572865, 0, 0, -1638400, 0, 0, -1638399, 0, 0, -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1441793, 0, 0, -1507328, 0, 0, -1507327, 0, 0, -1376257, 0, 0, -1441792, 0, 0, -1441791, 0, 0, -1310721, 0, 0, -1376256, 0, 0, -1376255, 0, 0, -1245185, 0, 0, -1310720, 0, 0, -1310719, 0, 0, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 0, -1114113, 0, 0, -1179648, 0, 0, -1179647, 0, 0, -1048577, 0, 0, -1114112, 0, 0, -1114111, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -851969, 0, 0, -917504, 0, 0, -917503, 0, 0, -786433, 0, 0, -851968, 0, 0, -851967, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1376256, 1, 0, 1441792, 1, 0, 1507328, 1, 0, 1572864, 1, 0, 1638400, 1, 0, 1703936, 1, 0, 1769472, 1, 0, 1835008, 1, 0, 1900544, 1, 0, 1966080, 1, 0, 2031616, 1, 0, 2097152, 1, 0, 2162688, 1, 0, 2228224, 1, 0, 2293760, 1, 0, 2359296, 1, 0, 2424832, 1, 0, 2490368, 1, 0, 2555904, 1, 0, 2621440, 1, 0, 2686976, 1, 0, 2752512, 1, 0, 2818048, 1, 0, 2883584, 1, 0, 2949120, 1, 0, 3014656, 1, 0, 3080192, 1, 0, 3145728, 1, 0, 3211264, 1, 0, 3276800, 1, 0, 3342336, 1, 0, 3407872, 1, 0, 3473408, 1, 0, 3538944, 1, 0, 3604480, 1, 0, 3670016, 1, 0, 3735552, 1, 0, 3801088, 1, 0, 3866624, 1, 0, 3932160, 1, 0, 3997696, 1, 0, 4063232, 1, 0, 4128768, 1, 0, 4194304, 1, 0, 4259840, 1, 0, 4325376, 1, 0, 4390912, 1, 0, 4521983, 0, 0, 4456448, 0, 0, 4456449, 0, 0, 4587519, 0, 0, 4521984, 0, 0, 4521985, 0, 0, 4653055, 0, 0, 4587520, 0, 0, 4587521, 0, 0, 4718591, 0, 0, 4653056, 0, 0, 4653057, 0, 0, 4784127, 0, 0, 4718592, 0, 0, 4718593, 0, 0, 4784128, 0, 0, 4849664, 0, 0 )

[node name="WallBG" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="WallFG" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -3473410, 4, 0, -3538942, 4, 0, -3407874, 4, 0, -3473406, 4, 0, -3342338, 4, 0, -3407870, 4, 0, -3276802, 4, 0, -3342334, 4, 0, -3211266, 4, 0, -3276798, 4, 0, -3145730, 4, 0, -3211262, 4, 0, -3080194, 4, 0, -3145726, 4, 0, -3014658, 4, 0, -3080190, 4, 0, -2949122, 4, 0, -3014654, 4, 0, -2883586, 4, 0, -2949118, 4, 0, -2818050, 4, 0, -2883582, 4, 0, -2752514, 4, 0, -2818046, 4, 0, -2686978, 4, 0, -2752510, 4, 0, -2621442, 4, 0, -2686974, 4, 0, -2555906, 4, 0, -2621438, 4, 0, -2490370, 4, 0, -2555902, 4, 0, -2424834, 4, 0, -2490366, 4, 0, -2359298, 4, 0, -2424830, 4, 0, -2293762, 4, 0, -2359294, 4, 0, -2228226, 4, 0, -2293758, 4, 0, -2162690, 4, 0, -2228222, 4, 0, -2097154, 4, 0, -2162686, 4, 0, -2031618, 4, 0, -2097150, 4, 0, -1966082, 4, 0, -2031614, 4, 0, -1900546, 4, 0, -1966078, 4, 0, -1835010, 4, 0, -1900542, 4, 0, -1769474, 4, 0, -1835006, 4, 0, -1703938, 4, 0, -1769470, 4, 0, -1638402, 4, 0, -1703934, 4, 0, -1572866, 4, 0, -1638398, 4, 0, -1507330, 4, 0, -1572862, 4, 0, -1441794, 4, 0, -1507326, 4, 0, -1376258, 4, 0, -1441790, 4, 0, -1310722, 4, 0, -1376254, 4, 0, -1245186, 4, 0, -1310718, 4, 0, -1179650, 4, 0, -1245182, 4, 0, -1114114, 4, 0, -1179646, 4, 0, -1048578, 4, 0, -1114110, 4, 0, -983042, 4, 0, -1048574, 4, 0, -917506, 4, 0, -983038, 4, 0, -851970, 4, 0, -917502, 4, 0, -786434, 4, 0, -851966, 4, 0, -720898, 4, 0, -786430, 4, 0, -655362, 4, 0, -720894, 4, 0, -589826, 4, 0, -655358, 4, 0, -524290, 4, 0, -589822, 4, 0, -458754, 4, 0, -524286, 4, 0, -393218, 4, 0, -458750, 4, 0, -327682, 4, 0, -393214, 4, 0, -262146, 4, 0, -327678, 4, 0, -196610, 4, 0, -262142, 4, 0, -131074, 4, 0, -196606, 4, 0, -65538, 4, 0, -131070, 4, 0, -2, 4, 0, -65534, 4, 0, 65534, 4, 0, 2, 4, 0, 131070, 4, 0, 65538, 4, 0, 196606, 4, 0, 131074, 4, 0, 262142, 4, 0, 196610, 4, 0, 327678, 4, 0, 262146, 4, 0, 393214, 4, 0, 327682, 4, 0, 458750, 4, 0, 393218, 4, 0, 524286, 4, 0, 458754, 4, 0, 589822, 4, 0, 524290, 4, 0, 655358, 4, 0, 589826, 4, 0, 720894, 4, 0, 655362, 4, 0, 786430, 4, 0, 720898, 4, 0, 851966, 0, 0, 851967, 34, 0, 786433, 35, 0, 786434, 0, 0, 917503, 36, 0, 851969, 37, 0, 983039, 36, 0, 917505, 37, 0, 1048575, 36, 0, 983041, 37, 0, 1114111, 36, 0, 1048577, 37, 0, 1179647, 36, 0, 1114113, 37, 0, 1245183, 36, 0, 1179649, 37, 0, 1310719, 36, 0, 1245185, 37, 0, 1376255, 36, 0, 1310721, 37, 0, 1441791, 36, 0, 1376257, 37, 0, 1507327, 36, 0, 1441793, 37, 0, 1572863, 36, 0, 1507329, 37, 0, 1638399, 36, 0, 1572865, 37, 0, 1703935, 36, 0, 1638401, 37, 0, 1769471, 36, 0, 1703937, 37, 0, 1835007, 36, 0, 1769473, 37, 0, 1900543, 36, 0, 1835009, 37, 0, 1966079, 36, 0, 1900545, 37, 0, 2031615, 36, 0, 1966081, 37, 0, 2097151, 36, 0, 2031617, 37, 0, 2162687, 36, 0, 2097153, 37, 0, 2228223, 36, 0, 2162689, 37, 0, 2293759, 36, 0, 2228225, 37, 0, 2359295, 36, 0, 2293761, 37, 0, 2424831, 36, 0, 2359297, 37, 0, 2490367, 36, 0, 2424833, 37, 0, 2555903, 36, 0, 2490369, 37, 0, 2621439, 36, 0, 2555905, 37, 0, 2686975, 36, 0, 2621441, 37, 0, 2752511, 36, 0, 2686977, 37, 0, 2818047, 36, 0, 2752513, 37, 0, 2883583, 36, 0, 2818049, 37, 0, 2949119, 36, 0, 2883585, 37, 0, 3014655, 36, 0, 2949121, 37, 0, 3080191, 36, 0, 3014657, 37, 0, 3145727, 36, 0, 3080193, 37, 0, 3211263, 36, 0, 3145729, 37, 0, 3276799, 36, 0, 3211265, 37, 0, 3342335, 36, 0, 3276801, 37, 0, 3407871, 36, 0, 3342337, 37, 0, 3473407, 36, 0, 3407873, 37, 0, 3538943, 36, 0, 3473409, 37, 0, 3604479, 36, 0, 3538945, 37, 0, 3670015, 36, 0, 3604481, 37, 0, 3735551, 36, 0, 3670017, 37, 0, 3801087, 36, 0, 3735553, 37, 0, 3866623, 36, 0, 3801089, 37, 0, 3932159, 36, 0, 3866625, 37, 0, 3997695, 36, 0, 3932161, 37, 0, 4063231, 36, 0, 3997697, 37, 0, 4128767, 36, 0, 4063233, 37, 0, 4194303, 36, 0, 4128769, 37, 0, 4259839, 36, 0, 4194305, 37, 0, 4325375, 36, 0, 4259841, 37, 0, 4390911, 36, 0, 4325377, 37, 0, 4456446, 20, 0, 4456447, 38, 0, 4390913, 39, 0, 4390914, 20, 0, 4521982, 6, 0, 4456450, 6, 0, 4587518, 6, 0, 4521986, 6, 0, 4653054, 6, 0, 4587522, 6, 0, 4718590, 6, 0, 4653058, 6, 0, 4784126, 6, 0, 4718594, 6, 0, 4849662, 8, 0, 4849663, 18, 0, 4784129, 21, 0, 4784130, 10, 0, 4915198, 0, 0, 4915199, 0, 0, 4849665, 0, 0, 4849666, 0, 0 )

[node name="Player" parent="WallFG" instance=ExtResource( 6 )]
position = Vector2( 7, -232 )

[node name="Light2D2" type="Light2D" parent="WallFG/Player"]
texture = ExtResource( 5 )
texture_scale = 1.1
color = Color( 1, 1, 1, 0.294118 )
energy = 1.5
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="SingleDoorBottom" parent="WallFG" instance=ExtResource( 7 )]
position = Vector2( 8, 1184 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Teleporter" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -176 )
teleport_location = Vector2( 8, -232 )
apply_axis = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleporter"]
position = Vector2( 8, -216 )
shape = SubResource( 1 )

[node name="NextLevel" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
position = Vector2( 8, 1202.44 )
shape = SubResource( 2 )

[node name="TransitionScreen" parent="." instance=ExtResource( 3 )]
start_transition = true

[connection signal="body_entered" from="NextLevel" to="." method="_on_NextLevel_body_entered"]
