[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/level1/laci.tres" type="Theme" id=2]
[ext_resource path="res://scenes/inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/locksafe_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/bgm/lv1/paper-collect.mp3" type="AudioStream" id=5]
[ext_resource path="res://scripts/TrashGame.gd" type="Script" id=6]
[ext_resource path="res://assets/tilesets/tilemap_home.tres" type="TileSet" id=7]
[ext_resource path="res://scenes/dialoguebox.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/sampah/money.png" type="Texture" id=9]
[ext_resource path="res://scenes/objects/locksafe.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/level0/level0.gd" type="Script" id=11]
[ext_resource path="res://assets/sprites/lighting/light.png" type="Texture" id=12]
[ext_resource path="res://scenes/Sampah.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Key.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/tilesets/tilemap_home_floor.tres" type="TileSet" id=15]
[ext_resource path="res://assets/bgm/lv1/key-get.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/sprites/objects/paper_small.png" type="Texture" id=17]
[ext_resource path="res://scenes/pickable_overworld.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/sprites/items/locksafe_pass_1.png" type="Texture" id=19]
[ext_resource path="res://scenes/interactable_object.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/doors/singledoor_hadapsisi.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/TransitionScreen1.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/sfx/locksafe/open.mp3" type="AudioStream" id=23]
[ext_resource path="res://assets/sprites/items/locksafe_pass_2.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/items/locksafe_pass_3.png" type="Texture" id=25]
[ext_resource path="res://scenes/Scenery/pausemenu.tscn" type="PackedScene" id=26]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8.0625 )

[node name="Level0C" type="Node2D"]
position = Vector2( -11, 46 )
script = ExtResource( 11 )
next_scene = "res://scenes/level0/level0d.tscn"
player_path = NodePath("Wall/Player")

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0 )

[node name="Floor2" type="TileMap" parent="."]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 262144, 2, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 4, 0, 327680, 7, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 5, 0, 393216, 8, 0, 393217, 9, 0, 393218, 9, 0, 393219, 9, 0, 393220, 10, 0 )

[node name="WallBG" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="Wall" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -65537, 1, 0, -131072, 9, 0, -131071, 9, 0, -131070, 9, 0, -131069, 9, 0, -131068, 9, 0, -131067, 18, 0, -131066, 42, 0, -131065, 21, 0, -131064, 9, 0, -131063, 9, 0, -131062, 9, 0, -131061, 9, 0, -131060, 9, 0, -131059, 3, 0, -1, 6, 0, -65536, 45, 0, -65535, 46, 0, -65534, 47, 0, -65533, 46, 0, -65532, 46, 0, -65531, 48, 0, -65529, 0, 0, -65528, 4, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 7, 0, 65535, 6, 0, 8, 4, 0, 9, 28, 0, 13, 7, 0, 131071, 6, 0, 65544, 4, 0, 65549, 7, 0, 196607, 6, 0, 131073, 51, 0, 131080, 4, 0, 131085, 6, 0, 262143, 6, 0, 196616, 4, 0, 196621, 6, 0, 327679, 6, 0, 262152, 8, 0, 262153, 18, 0, 262155, 21, 0, 262156, 2, 0, 262157, 10, 0, 393215, 6, 0, 327688, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 458751, 6, 0, 524287, 6, 0, 458753, 52, 0, 458765, 20, 0, 589823, 11, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 13, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0 )

[node name="Locksafe" parent="Wall" instance=ExtResource( 10 )]
position = Vector2( 96, 47 )

[node name="SingleDoorSide" parent="Wall" instance=ExtResource( 21 )]
position = Vector2( 217, 98 )
is_locked = true

[node name="PickableOverworld" parent="Wall" instance=ExtResource( 18 )]
position = Vector2( 40, 0 )
item_name = "First Password"
obtain_message = "You found the first password."
overworld_sprite = ExtResource( 17 )
inventory_sprite = ExtResource( 19 )

[node name="interact_trigger" parent="Wall/PickableOverworld" instance=ExtResource( 20 )]
position = Vector2( 0, 10 )
show_interact_message = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/PickableOverworld/interact_trigger"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="PickableOverworld2" parent="Wall" instance=ExtResource( 18 )]
position = Vector2( 29, 57 )
item_name = "Second Password"
obtain_message = "You found the second password."
overworld_sprite = ExtResource( 17 )
inventory_sprite = ExtResource( 24 )

[node name="interact_trigger" parent="Wall/PickableOverworld2" instance=ExtResource( 20 )]
position = Vector2( 0, 10 )
show_interact_message = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/PickableOverworld2/interact_trigger"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="PickableOverworld3" parent="Wall" instance=ExtResource( 18 )]
position = Vector2( 167, 9 )
item_name = "Third Password"
obtain_message = "You found the third password."
overworld_sprite = ExtResource( 17 )
inventory_sprite = ExtResource( 25 )

[node name="interact_trigger" parent="Wall/PickableOverworld3" instance=ExtResource( 20 )]
position = Vector2( 0, 10 )
show_interact_message = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/PickableOverworld3/interact_trigger"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Player" parent="Wall" instance=ExtResource( 1 )]
position = Vector2( 102, 23 )

[node name="Light2D2" type="Light2D" parent="Wall/Player"]
texture = ExtResource( 12 )
texture_scale = 1.5
color = Color( 1, 1, 1, 0.294118 )
energy = 1.5
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="NextLevel" type="Area2D" parent="."]
position = Vector2( 217, 98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
position = Vector2( -1, 5.9375 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="LocksafeUI" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
locksafe_path = NodePath("../../Wall/Locksafe")
player_path = NodePath("../../Wall/Player")

[node name="TrashGame" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
trash_bin_path = NodePath("../../Wall/Locksafe")
player_path = NodePath("../../Wall/Player")

[node name="Panel" type="Panel" parent="CanvasLayer/TrashGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -275.0
margin_right = 205.0
margin_bottom = 275.0
rect_clip_content = true
theme = ExtResource( 2 )

[node name="Key" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 14 )]
margin_left = 2.0
margin_top = 42.0
margin_right = 2.0
margin_bottom = 42.0

[node name="Trash1" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 0.00999451
margin_top = 0.199982
margin_right = 0.00999451
margin_bottom = 0.199982

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash1" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash2" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 118.01
margin_top = 24.2
margin_right = 118.01
margin_bottom = 24.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash2" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash3" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 30.01
margin_top = 43.2
margin_right = 30.01
margin_bottom = 43.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash3" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash4" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 104.01
margin_top = 67.2
margin_right = 104.01
margin_bottom = 67.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash4" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash5" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 14.01
margin_top = 83.2
margin_right = 14.01
margin_bottom = 83.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash5" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash6" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 126.01
margin_top = -3.80002
margin_right = 126.01
margin_bottom = -3.80002

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash6" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash7" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 125.01
margin_top = 105.2
margin_right = 125.01
margin_bottom = 105.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash7" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash8" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = -3.99001
margin_top = 133.2
margin_right = -3.99001
margin_bottom = 133.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash8" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash9" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = -37.99
margin_top = 52.2
margin_right = -37.99
margin_bottom = 52.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash9" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Trash10" parent="CanvasLayer/TrashGame/Panel" instance=ExtResource( 13 )]
anchor_left = 0.339
anchor_top = 0.456
anchor_right = 0.339
anchor_bottom = 0.456
margin_left = 148.01
margin_top = 131.2
margin_right = 148.01
margin_bottom = 131.2

[node name="Sprite" parent="CanvasLayer/TrashGame/Panel/Trash10" index="0"]
anchor_left = 0.0
margin_left = -74.0
margin_top = -39.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 3

[node name="Exit button" type="Button" parent="CanvasLayer/TrashGame"]
margin_left = 1128.0
margin_top = 242.0
margin_right = 1148.0
margin_bottom = 262.0
rect_scale = Vector2( 3, 3 )
text = "X"

[node name="TransitionScreen" parent="." instance=ExtResource( 22 )]
pause_mode = 2
start_transition = true

[node name="DialogueBox" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 26 )]
pause_mode = 2
visible = false

[node name="KeySFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 2 )
stream = ExtResource( 16 )
bus = "SFX"

[node name="PaperSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="OpenLocksafeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
pitch_scale = 0.85
bus = "SFX"

[node name="Timer0C" type="Timer" parent="."]
wait_time = 1.05
one_shot = true

[connection signal="open" from="Wall/Locksafe" to="." method="_on_Locksafe_open"]
[connection signal="open_locksafe" from="Wall/Locksafe" to="." method="_on_Locksafe_open_locksafe"]
[connection signal="body_entered" from="NextLevel" to="." method="_on_NextLevel_body_entered"]
[connection signal="success" from="CanvasLayer/LocksafeUI" to="." method="_on_LocksafeUI_success"]
[connection signal="pressed" from="CanvasLayer/TrashGame/Exit button" to="CanvasLayer/TrashGame" method="_on_Exit_button_pressed"]
[connection signal="timeout" from="Timer0C" to="." method="_on_Timer0C_timeout"]

[editable path="CanvasLayer/TrashGame/Panel/Trash1"]
[editable path="CanvasLayer/TrashGame/Panel/Trash2"]
[editable path="CanvasLayer/TrashGame/Panel/Trash3"]
[editable path="CanvasLayer/TrashGame/Panel/Trash4"]
[editable path="CanvasLayer/TrashGame/Panel/Trash5"]
[editable path="CanvasLayer/TrashGame/Panel/Trash6"]
[editable path="CanvasLayer/TrashGame/Panel/Trash7"]
[editable path="CanvasLayer/TrashGame/Panel/Trash8"]
[editable path="CanvasLayer/TrashGame/Panel/Trash9"]
[editable path="CanvasLayer/TrashGame/Panel/Trash10"]
